# GlowGuide

./: .dockerignore  .env.example  .flake8  .gitignore  .gitlab-ci.yml  .semgrep.yml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PRIVACY.md  README.md  SECURITY.md  USER_MANUAL.md  app.py  cliff.toml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  docs_issue.md  feature_request.md  setup_query.md
.github/workflows/: quality.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.streamlit/: config.toml
db/: glowguide.db
docs/: feedback.md  geographical-expansion.md  growth-strategy.md
locales/: en.json  hi.json  te.json
modules/: __init__.py  database.py  i18n.py  recommendations.py
specs/001-glowguide-personal-care-platform/: data-model.md  plan.md  research.md  spec.md  tasks.md
tests/: test_modules.py
