[project]
name = "glowguide"
version = "0.1.0"
description = "A unisex personal care education web app built with Streamlit."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["streamlit"]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "vulture",
    "bandit[toml]",
    "pylint",
    "flake8",
    "semgrep",
    "pyupgrade",
    "pytest",
    "pytest-cov",
]

# ---------------------------------------------------------------------------
# Ruff – fast linter + formatter (replaces Flake8 for many rules)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [
    ".venv",
    ".git",
    "__pycache__",
    "db",
    "specs",
    ".specify",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
    "N",   # pep8-naming
    "ANN", # flake8-annotations (type hints)
]
ignore = [
    "S101",  # Use of `assert` (acceptable in tests)
]

[tool.ruff.lint.per-file-ignores]
"app.py" = ["ANN"]  # UI entry point – relax annotation requirements

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy – static type checker
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true
exclude = [
    "^.venv/",
    "^specs/",
    "^.specify/",
]

# ---------------------------------------------------------------------------
# Pylint
# ---------------------------------------------------------------------------
[tool.pylint.main]
py-version = "3.10"
ignore = [".venv", "specs", ".specify", "__pycache__"]

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0114",  # Missing module docstring
    "C0115",  # Missing class docstring
    "C0116",  # Missing function or method docstring
    "R0903",  # Too few public methods
    "W0611",  # Unused import (handled by Ruff/Flake8)
]

[tool.pylint.format]
max-line-length = 100

# ---------------------------------------------------------------------------
# Bandit – security linter
# ---------------------------------------------------------------------------
[tool.bandit]
targets = ["app.py", "modules"]
exclude_dirs = [".venv", "specs", ".specify", "db"]
skips = ["B101"]   # assert_used – acceptable in non-security contexts

# ---------------------------------------------------------------------------
# Vulture – dead code finder
# ---------------------------------------------------------------------------
[tool.vulture]
min_confidence = 80
paths = ["app.py", "modules"]
ignore_names = ["main"]         # Streamlit entry-points are called externally
ignore_decorators = ["@st.*"]  # Streamlit decorators

# ---------------------------------------------------------------------------
# Pyupgrade – enforces modern Python syntax
# ---------------------------------------------------------------------------
# Run with: pyupgrade --py310-plus **/*.py
# No TOML config needed; options are passed on the CLI (see Makefile / CI).
